--- a/templates/prev-create.html
+++ b/templates/prev-create.html
@@ -23,6 +23,6 @@
       <center><button type="submit">作成する</button></center>
     </form>
 
-    <li class="menu-item"><a href="#">アカウントをお持ちの方はこちら</a></li>
+    <li class="menu-item"><a href="/user/login">アカウントをお持ちの方はこちら</a></li>
   </body>
 </html>
